src/main/kotlin/org/example/gomstest/global/error/exception/GlobalException.kt
package org.example.gomstest.global.error.exception

import org.example.gomstest.global.error.ErrorCode

open class GlobalException(val errorCode: ErrorCode): RuntimeException(errorCode.message)